welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: reassignment to val
    if (lookingFor = muns(i)) {
                   ^